@@ -8,10 +8,11 @@ Thomas "namespace" Nitschke spam@codecreator.net
 Stefan "Shaderman" Greven
 "Topsun"
 SmallPileofGibs spog@planetquake.com
+"Tr3b"
 
 Small contributions and improvements for 1.5
 --------
-"eb"
+Eric "eb" Barth
 
 Loki
 ----
